# api/internal/docs/swagger.yaml
@@ -279,6 +279,10 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/internal_handler.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/internal_handler.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
